# fluxkrea

./: .env.example  .gitignore  .npmrc  ADMIN_DEBUG_GUIDE.md  API_INTEGRATION_GUIDE.md  CLAUDE.md  CLEANUP-INSTRUCTIONS.md  CORS_FIX_GUIDE.md  CORS_ISSUE_RESOLVED.md  CREDITS_MODAL_COMPLETED.md  DEBUG_CREDITS_ISSUE.md  DEBUG_GUIDE.md  DEPLOYMENT_GUIDE.md  FINAL_PRODUCT_CONFIG.md  KREA_PROFESSIONAL_SETUP.md  PAYMENT_SYSTEM_FIXED_REPORT.md  PAYPAL_COMPLETE_CONFIG.md  PAYPAL_PRODUCT_SETUP.md  PAYPAL_README.md  PAYPAL_SUBSCRIPTION_GUIDE.md  PAYPAL_WEBHOOK_EVENTS.md  QUICK-DELETE-GUIDE.md  README.md  RLS策略修复指南.md  RLS策略修复方案-更新版.md  SEO_UX_OPTIMIZATION_REPORT.md  SUBSCRIPTION_SYSTEM_COMPLETE.md  SUPABASE_INTEGRATION_GUIDE.md  Supabase-RLS策略添加操作指南-更新版.md  Supabase-RLS策略添加操作指南.md  Supabase-RLS策略类型修复指南.md  Supabase-SQL策略修改指南-英文版.md  Supabase-SQL策略修改指南.md  Supabase视图创建指南.md  USER_SYSTEM_IMPLEMENTATION_REPORT.md  WEBHOOK_SOLUTION.md  WEBHOOK_SOLUTION_FINAL.md  activate_latest_subscription.js  activate_order_I-WK6UTE0104DU.js  activate_subscription.js  (+227 more)
.vercel/: project.json
api/: create-paypal-subscription.js  debug.js  generate-image.js  generate.js  get-user-credits.js  handle-subscription.js  paypal-webhook-backup.js  paypal-webhook-complete.js  paypal-webhook-debug.js  paypal-webhook-fixed.js  paypal-webhook-native.js  paypal-webhook-supabase.js  paypal-webhook-working.js  paypal-webhook.js  replicate-generate.js  simple-paypal-subscription.js  test-basic.js  test-config.js  test-sd.js
archive/: root-index.html  root-pricing.html  root-showcase.html  root-test_api.html  (+1 more)
(+117 files in other folders)
