[project]
name = "kflux"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.2.1",
    "einops>=0.8.1",
    "huggingface-hub>=0.34.3",
    "jupyter>=1.1.1",
    "safetensors>=0.5.3",
    "sentencepiece>=0.2.0",
    "tokenizers>=0.21.4",
    "torch>=2.6.0",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "transformers>=4.54.1",
]
